FPM: Split into Algebra and Analysis

--- a/2020_21/FPM/algebra-notes/notes.tex
+++ b/2020_21/FPM/algebra-notes/notes.tex
@@ -2,7 +2,7 @@
 \usepackage{notes-preamble}
 \begin{document}
 \mkfpmthms
-\title{Fundamentals of Pure Mathematics (SEM4)}
+\title{Fundamentals of Pure Mathematics - Algebra (SEM4)}
 \author{Franz Miltz}
 \maketitle
 \tableofcontents
