FPM: Added corollary

--- a/2020_21/FPM/algebra-notes/notes.tex
+++ b/2020_21/FPM/algebra-notes/notes.tex
@@ -197,6 +197,16 @@
     \end{itemize}
 \end{theorem}
 
+\begin{corollary*}
+    Let $G,H$ be groups. Then
+    \begin{align*}
+        |G\times H| = |G||H|.
+    \end{align*}
+    \begin{proof}
+        $$\forall g\in G,\:|\{(g,h) : h\in H\}|=|H| \:\Rightarrow\: |G\times H| = \sum_{g\in G}|H| = |G||H|.$$
+    \end{proof}
+\end{corollary*}
+
 \setcounter{theorem}{5}
 \begin{lemma}
     Let $G$ be a group. If $g,h\in G$, then
